--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "Manpreet Puar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "http-status-codes": "^2.3.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
