--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "firebase-admin": "^12.0.0",
     "http-status-codes": "^2.3.0",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3"
